terraform/shared_security_groups.tf
resource "aws_security_group" "alb" {
  name   = "${var.project_name} ALB Security Group"
  vpc_id = module.vpc.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Any port, any protocol"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "${var.project_name}-security-group-alb"
    env  = terraform.workspace
  }
}

resource "aws_security_group" "ecs" {
  name   = "${var.project_name} ECS Security Group"
  vpc_id = module.vpc.id

  ingress {
    description     = "Any port, any protocol from ALB"
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    description = "Any port, any protocol"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "${var.project_name}-security-group-ecs"
    env  = terraform.workspace
  }
}
